# sui-onchain-arbitrage

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/: pull_request_template.md
config/: mainnet.toml
crates/arb-engine/: Cargo.toml
crates/arb-engine/src/: cycle.rs  error.rs  graph.rs  lib.rs  opportunity.rs  profit_token.rs  search.rs  simulator.rs
crates/arb-engine/tests/: integration.rs
crates/arb-types/: Cargo.toml
crates/arb-types/src/: config.rs  error.rs  event.rs  lib.rs  pool.rs  tick.rs
crates/clmm-math/: Cargo.toml
crates/clmm-math/src/: error.rs  lib.rs  math_u256.rs  simulate.rs  swap_math.rs  tick_math.rs
crates/dex/cetus/: Cargo.toml
crates/dex/cetus/src/: events.rs  lib.rs  raw.rs  ticks.rs
crates/dex/common/: Cargo.toml
crates/dex/common/src/: lib.rs
crates/dex/turbos/: Cargo.toml
crates/dex/turbos/src/: events.rs  lib.rs  raw.rs  ticks.rs
crates/pool-manager/: Cargo.toml
crates/pool-manager/src/: collector.rs  discovery.rs  lib.rs
crates/pool-manager/tests/: event_apply_e2e.rs  integration.rs  swap_verification.rs  tick_verification.rs
crates/sui-client/: Cargo.toml
crates/sui-client/src/: client.rs  lib.rs  types.rs
docs/agent/: ARCHITECTURE.md  RESEARCH.md  RESEARCH_2.md
docs/plans/: phase1-foundation.md  phase2-math.md  phase3-strategy.md
